--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,14 @@ a {
     color: #666;
 }
 
+a:hover {
+    text-decoration: none;
+}
+
+a:active {
+    color: #999;
+}
+
 ::-moz-selection {
     background-color: #333;
     color: #fff;
@@ -30,6 +38,10 @@ a {
     color: #fff;
 }
 
+section {
+    text-align: left;
+}
+
 #albums {
     overflow: hidden;
 }
@@ -37,10 +49,17 @@ a {
 #albums li {
     clear: both;
     display: block;
+    margin-bottom: .5em;
 }
 
 #photos {
     clear: both;
+}
+
+#photos a {
+    margin-right: .5em;
+    display: inline-block;
+    vertical-align: top;
 }
 
 #photos img {
