--- a/css/style.css
+++ b/css/style.css
@@ -95,15 +95,10 @@ a:active {
 }
 
 #photos .name {
-    position: absolute;
+    top: auto;
     bottom: -40px;
     width: 100%;
-    padding: 0 .5em;
-    color: #fff;
-    font-size: 0.75em;
-    background-color: rgba(0,0,0,.5);
-    text-align: center;
-    z-index: 1;
+    padding: 5em 0;
     -moz-transition: bottom 250ms;
     -ms-transition: bottom 250ms;
     -o-transition: bottom 250ms;
