--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,33 @@
 * {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  margin: 0;
   padding: 0;
+  margin: 0;
+}
+*, *:before, *:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 /* Force scrollbar in non-IE and Remove iOS text size adjust without disabling user zoom */
 html {
   height: 100%;
-  font-size: 100%;
   overflow-y: scroll;
+  font-size: 100%;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
 }
 /* Improve default text rendering,handling of kerning pairs and ligatures */
 /*Options fonts: Source Sans Pro, Open Sans, Droid, Raleway, Lato, Montserrat */
 body {
-  direction: ltr;
   font: 400 16px "Open Sans", Arial, sans-serif;
   color: dimgray;
+  text-rendering: optimizeLegibility;
   background-color: white;
   border-top: 5px solid black;
-  text-rendering: optimizeLegibility;
+  direction: ltr;
 }
 a {
   color: black;
   text-decoration: none;
-}
-*:active {
-  -webkit-tap-highlight-color: rgba(0,0,0,0);
-  -moz-tap-highlight-color: rgba(0,0,0,0);
-  tap-highlight-color: rgba(0,0,0,0);
 }
 ::selection {
   color: white;
@@ -42,6 +39,7 @@ a {
 }
 
 .container {
+  max-width: 960px;
   margin: 2em;
 }
 
@@ -51,29 +49,26 @@ a {
 
 .logo {
   display: inline-block;
-  font-weight: 600;
   font-size: 310%;
+  font-weight: 600;
   line-height: 100%;
   color: black;
 }
 
 .logo:hover {
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  -ms-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-
   -webkit-transform: rotateX(360deg);
   -moz-transform: rotateX(360deg);
   -ms-transform: rotateX(360deg);
   -o-transform: rotateX(360deg);
   transform: rotateX(360deg);
-
   -webkit-animation: fadeInOutBackground 0.4s ease-in-out;
   -moz-animation: fadeInOutBackground 0.4s ease-in-out;
   animation: fadeInOutBackground 0.4s ease-in-out;
-
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
   -webkit-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
   -ms-backface-visibility: hidden;
@@ -81,8 +76,8 @@ a {
 
 .main {
   width: 100%;
-  margin: 2em 0;
   min-width: 480px;
+  margin: 2em 0;
   overflow: hidden;
 }
 
@@ -94,13 +89,12 @@ a {
 
 .profile-photo {
   display: block;
+  width: 125px;
   margin: 0 auto 1em;
+  border: 5px solid lightgray;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-radius: 50%;
-  width: 125px;
-  border: 5px solid lightgray;
-
   -webkit-filter: grayscale(100%);
   -moz-filter: grayscale(100%);
   -ms-filter: grayscale(100%);
@@ -124,10 +118,10 @@ a {
 }
 
 .profile-social {
-  margin: 0 auto;
   width: 160px;
-  list-style: none;
+  margin: 0 auto;
   text-align: center;
+  list-style: none;
 }
 
 .profile-social-icon {
@@ -144,11 +138,10 @@ a {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-radius: 50%;
-
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
   -ms-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
 
@@ -156,13 +149,11 @@ a {
 .profile-social-icon > a:focus {
   color: white;
   background-color: black;
-
   -webkit-transform: rotate(360deg);
   -moz-transform: rotate(360deg);
   -ms-transform: rotate(360deg);
   -o-transform: rotate(360deg);
   transform: rotate(360deg);
-
 }
 
 .repos {
@@ -172,8 +163,8 @@ a {
 }
 
 .repos-head {
-  margin-bottom: 1em;
   padding-bottom: .5em;
+  margin-bottom: 1em;
   font-size: 150%;
   font-weight: 600;
   border-bottom: 1px dotted darkgray;
@@ -207,12 +198,12 @@ a {
 
 .repos-url {
   color: black;
-  background: lightyellow;
   text-decoration: underline;
+  background: lightyellow;
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
   -ms-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
 
