--- a/assets/stylesheets/base/_fontello.scss
+++ b/assets/stylesheets/base/_fontello.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('/font/fontello.eot?46843074');
-  src: url('/font/fontello.eot?46843074#iefix') format('embedded-opentype'),
-       url('/font/fontello.woff?46843074') format('woff'),
-       url('/font/fontello.ttf?46843074') format('truetype'),
-       url('/font/fontello.svg?46843074#fontello') format('svg');
+  src: url('/assets/fonts/fontello.eot?46843074');
+  src: url('/assets/fonts/fontello.eot?46843074#iefix') format('embedded-opentype'),
+       url('/assets/fonts/fontello.woff?46843074') format('woff'),
+       url('/assets/fonts/fontello.ttf?46843074') format('truetype'),
+       url('/assets/fonts/fontello.svg?46843074#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -50,10 +50,10 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-.icon-github:before { content: '\e800'; } /* '' */
-.icon-gplus:before { content: '\e803'; } /* '' */
-.icon-linkedin:before { content: '\e802'; } /* '' */
-.icon-twitter:before { content: '\e801'; } /* '' */
+.icon-github:before { content: '\e800'; }
+.icon-gplus:before { content: '\e803'; }
+.icon-linkedin:before { content: '\e802'; }
+.icon-twitter:before { content: '\e801'; }
 
 .i-code {
   display: none;
