--- a/assets/stylesheets/partials/_variables.scss
+++ b/assets/stylesheets/partials/_variables.scss
@@ -2,6 +2,6 @@
    Font sizes
    ========================================================================== */
 
-$base-size-desktop: 16px;
-$base-size-tablet: 14px;
-$base-size-phone: 12px;
+$base-font-size: 16px;
+$base-font-family: "Open Sans", Arial, sans-serif;
+$base-color: #000;
