--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,13 +1,4 @@
-:root.light {
-  --primary-color: #fff;
-  --secondary-color: #000;
-  --tertiary-color: #f7f7f7;
-  --contrast-color: #818181;
-  --highlight-color: lightyellow;
-  --max-width: 1100px;
-}
-
-:root.dark {
+:root {
   --primary-color: #fff;
   --secondary-color: #000;
   --tertiary-color: #f7f7f7;
@@ -31,6 +22,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-family: 'Open Sans';
 }
 
 body {
