--- a/src/styles/icon.module.css
+++ b/src/styles/icon.module.css
@@ -11,7 +11,7 @@
   height: 40px;
   line-height: 40px;
   text-align: center;
-  font-size: 2em;
+  font-size: 2rem;
   font-variant: normal;
   text-transform: none;
   -webkit-font-smoothing: antialiased;
