--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,5 @@
 :root {
+  color-scheme: light dark;
   --primary-color: #fff;
   --secondary-color: #1c1c1c;
   --tertiary-color: #eef0f2;
@@ -10,6 +11,14 @@
   --text-lg: 1.125rem;
   --text-xl: 1.25rem;
   --text-2xl: 1.5rem;
+}
+
+html[data-theme="dark"] {
+  --primary-color: #1c1c1c;
+  --secondary-color: #fff;
+  --tertiary-color: #2b2b2b;
+  --contrast-color: #777;
+  --highlight-color: #282828;
 }
 
 ::selection {
