--- a/src/styles/toggle.module.css
+++ b/src/styles/toggle.module.css
@@ -3,9 +3,9 @@
   top: 38px;
   right: 0;
   display: inline-block;
-  width: 60px;
+  width: 68px;
   height: 34px;
-  z-index: 1;
+  z-index: 0;
 }
 
 .switch input[type="checkbox"] {
@@ -36,6 +36,7 @@
   background-color: var(--primary-color);
   border-radius: 50%;
   transition: transform 0.2s;
+  z-index: 1;
 }
 
 input[type="checkbox"]:checked + .slider {
@@ -43,5 +44,20 @@ input[type="checkbox"]:checked + .slider {
 }
 
 input[type="checkbox"]:checked + .slider::before {
-  transform: translateX(26px);
+  transform: translateX(34px);
+}
+
+.icon__sun,
+.icon__moon {
+  position: absolute;
+  top: 4px;
+  z-index: 0;
+}
+
+.icon__sun {
+  left: 4px;
+}
+
+.icon__moon {
+  right: 4px;
 }
