--- a/src/styles/toggle.module.css
+++ b/src/styles/toggle.module.css
@@ -1,7 +1,7 @@
 .switch {
   position: absolute;
-  top: 38px;
-  right: 0;
+  top: 32px;
+  right: 1rem;
   display: inline-block;
   width: 68px;
   height: 34px;
