--- a/src/styles/skeleton.module.css
+++ b/src/styles/skeleton.module.css
@@ -1,7 +1,7 @@
 .animation {
   display: inline-block;
   width: 100%;
-  height: 1em;
+  height: var(--space-x-2);
   position: relative;
   overflow: hidden;
   background-color: #e3e3e3;
