--- a/src/styles/toggle.module.css
+++ b/src/styles/toggle.module.css
@@ -1,7 +1,7 @@
 .switch {
   position: absolute;
   top: 46px;
-  right: 1rem;
+  right: var(--space-x-1);
   z-index: 0;
   display: inline-block;
   width: 68px;
