--- a/src/styles/toggle.module.css
+++ b/src/styles/toggle.module.css
@@ -1,7 +1,7 @@
 .switch {
   position: absolute;
   top: 46px;
-  right: var(--space-x-1);
+  right: var(--space-x-2);
   z-index: 0;
   display: inline-block;
   width: 68px;
@@ -60,4 +60,10 @@ input[type="checkbox"]:checked + .slider:before {
 
 .icon__moon {
   right: 4px;
+}
+
+@media only screen and (max-width: 1024px) {
+  .switch {
+    right: var(--space-x-1);
+  }
 }
