--- a/src/styles/toggle.module.css
+++ b/src/styles/toggle.module.css
@@ -64,6 +64,7 @@ input[type="checkbox"]:checked + .slider:before {
 
 @media only screen and (max-width: 1024px) {
   .switch {
+    top: 28px;
     right: var(--space-x-1);
   }
 }
