--- a/src/styles/page.module.css
+++ b/src/styles/page.module.css
@@ -8,20 +8,18 @@
 .main {
   display: grid;
   grid-gap: var(--space-x-2);
-  grid-template-columns: 280px auto;
-  grid-template-areas: "sidebar article";
+  grid-template: "sidebar article" / 280px auto;
   margin: var(--space-x-2) var(--space-x-0) 0;
 }
 
-@media only screen and (max-width: 1024px) {
+@media (max-width: 768px) {
   .container {
     padding: var(--space-x-1);
   }
 
   .main {
     grid-gap: var(--space-x-4);
-    grid-template-columns: auto;
-    grid-template-areas:
+    grid-template:
       "sidebar"
       "article";
   }
