--- a/src/styles/toggle.module.css
+++ b/src/styles/toggle.module.css
@@ -62,7 +62,7 @@ input[type="checkbox"]:checked + .slider:before {
   right: 4px;
 }
 
-@media only screen and (max-width: 1024px) {
+@media (max-width: 768px) {
   .switch {
     top: 32px;
     right: var(--space-x-1);
