--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,8 +3,7 @@
   --primary-color: #fff;
   --secondary-color: #1c1c1c;
   --tertiary-color: #eef0f2;
-  --contrast-color: #aaa;
-  --highlight-color: #ffffe0;
+  --contrast-color: #999;
   --max-width: 1024px;
   --text-sm: 0.875rem;
   --text-base: 1rem;
@@ -25,7 +24,6 @@ html[data-theme="dark"] {
   --secondary-color: #fff;
   --tertiary-color: #2b2b2b;
   --contrast-color: #777;
-  --highlight-color: #282828;
 }
 
 ::selection {
@@ -42,7 +40,7 @@ html[data-theme="dark"] {
 html,
 body {
   max-width: 100vw;
-  font-family: 'Open Sans';
+  font-family: 'Inter';
   overflow-x: hidden;
 }
 
@@ -51,7 +49,7 @@ body {
   text-rendering: optimizeLegibility;
   background-color: var(--primary-color);
   border-top: 5px solid var(--secondary-color);
-  direction: ltr;
+  -webkit-font-smoothing: antialiased;
 }
 
 a {
