feat: update Next.js packages

--- a/src/styles/article.module.css
+++ b/src/styles/article.module.css
@@ -14,6 +14,7 @@
   border-bottom: 1px dotted var(--secondary-color);
   font-size: var(--text-2xl);
   font-weight: var(--font-semibold);
+  transition: var(--transition-200);
 }
 
 .item {
@@ -28,18 +29,20 @@
   display: block;
   font-size: var(--text-base);
   font-weight: var(--font-semibold);
+  transition: var(--transition-200);
 }
 
 .description {
   display: block;
   font-size: var(--text-sm);
   line-height: 150%;
+  transition: var(--transition-200);
 }
 
 .url {
   color: var(--secondary-color);
   box-shadow: 0 1px var(--secondary-color);
-  transition: all 0.4s;
+  transition: var(--transition-200);
 }
 
 .url:hover,
