--- a/src/styles/article.module.css
+++ b/src/styles/article.module.css
@@ -32,6 +32,14 @@
   transition: var(--transition-200);
 }
 
+.time {
+  display: block;
+  margin-bottom: var(--space-x-0_5);
+  color: var(--contrast-color);
+  font-size: var(--text-sm);
+  transition: var(--transition-200);
+}
+
 .description {
   display: block;
   font-size: var(--text-sm);
