--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -41,7 +41,7 @@ html[data-theme="dark"] {
 html,
 body {
   max-width: 100vw;
-  font-family: 'Inter';
+  font-family: -apple-system, system-ui, sans-serif;
   overflow-x: hidden;
 }
 
