--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,7 +8,6 @@
   --text-sm: 0.875rem;
   --text-base: 1rem;
   --text-lg: 1.125rem;
-  --text-xl: 1.25rem;
   --text-2xl: 1.5rem;
   --font-normal: 400;
   --font-semibold: 600;
@@ -18,6 +17,7 @@
   --space-x-2: 2rem;
   --space-x-4: 4rem;
   --transition-200: all 0.2s;
+  --border-radius: 0.375rem;
 }
 
 html[data-theme="dark"] {
