--- a/src/styles/skeleton.module.css
+++ b/src/styles/skeleton.module.css
@@ -3,7 +3,7 @@
   display: inline-block;
   width: 100%;
   height: var(--space-x-2);
-  background-color: #e3e3e3;
+  background-color: var(--tertiary-color);
   overflow: hidden;
 }
 
@@ -13,7 +13,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  background-image: linear-gradient(90deg, #ffffff00 0, #ffffff33 20%, #ffffff99 60%, #ffffff00);
+  background-image: linear-gradient(90deg, transparent 0, var(--contrast-color) 20%, var(--primary-color) 60%, transparent);
   animation: pulse 2s infinite;
   content: '';
   transform: translateX(-100%);
